2004/03/01 19:55 (+0100) kaffeetisch

	* t/GtkEntry.t
	* xs/GtkEntry.xs: Bind and test [sg]et_alignment.

	* t/01.GtkWindow.t
	* xs/GtkWindow.xs: Bind and test activate_key.

2004/03/01 02:24 (-0500) muppetman

	* xs/GdkPixmap.xs: bad signature in pod

	* xs/GtkCellRenderer.xs: hide deprecated warnings unless env var
	GTK2PERL_DEBUG is set and true.

2004/03/01 02:05 (-0500) muppetman

	* t/GdkDnd.t: make the test not fail when the destination window
	doesn't exist.

	* t/GdkEvent.t: some settings don't exist if you're not running
	gnome, e.g., remote to non-gnome desktop; don't fail if the setting
	isn't there.

	* xs/GdkDnd.xs: if find_window returns no destination window, the
	protocol is garbage; don't try to convert it to a protocol enum
	value.  this is half of the fix for the bizarre test problem
	were seeing in t/GdkDnd.t

2004/03/01 04:51 (+0100) kaffeetisch

	* t/GtkFileChooser.t: Rearrange some function calls to avoid
	warnings.  Expect that set_current_name doesn't care about the
	existance of the file and adjust the test accordingly.

2004/03/01 03:50 (+0100) kaffeetisch

	A t/GtkTreeModelIface.t: New test for the custom tree model stuff.

	* t/GdkEvent.t: Use the same window in multiple places.  Test
	Gtk2::Gdk::setting_get.  Skip the
	Gtk2::Gdk::Event::Selection::requestor test on Win32.

	* t/GdkEvent.t
	* xs/GdkEvent.xs: Bind and test handler_set.

	* t/GtkMenuItem.t
	* xs/GtkMenuItem.xs: Use a custom marshaller for the
	toggle_size_request signal since it uses a pointer to an integer
	as a means to return a value from a signal handler.  Bind and test
	toggle_size_request and toggle_size_allocate.

	* t/GtkTreeModel.t
	* xs/GtkTreeModel.xs: Bind and test ref_node and unref_node.

2004/03/01 01:54 (+0100) kaffeetisch

	* t/GtkFileChooser.t
	* xs/GtkFileChooser.xs: Bind and test [sg]et_use_preview_label.

2004/02/29 05:09 (-0500) muppetman

	* t/GtkWidget.t: skip style_get on 2.0.x; we can't implement style_get